made changes for shell